--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ujjwal Infratech</title>
+    <title>MAA VINDHYAVASINI DEVELOPERS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="header-content">
             <div class="logo-container">
-                <img src="images/mylogo.png"
-                width="200" alt="Ujjwal Infratech Logo">
+                <img src="images/original logo.png" width="100px" alt="Ujjwal Infratech Logo">
             </div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#services">Why us ?</a></li>
+                    <li><a href="#projects">Current Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -26,23 +25,35 @@
     </header>
 
     <section id="home" class="home-section">
+        <h2 style="color:chocolate" >Welcome to <dir style="color: crimson;">MAA VINDHYAVASINI DEVELOPERS</dir> </h2>
+        <p style="color: black;"> MAA VINDHYAVASINI DEVELOPERS is dedicated to providing premium land and property solutions at affordable prices. Our mission is to help you find your dream property effortlessly.</p>
+        <img src="images/front image.jpg" width="50%" alt="Home Image">
+        <p style="color: black;">MAA VINDHYAVASINI is an extremely customere oriented real estate company that encompasses passionate and perfect delivery to inject a sense of satisfaction to its customere who are associated with it.</p>
+    </section>
+
+    <section id="about" class="about-section">
         <div class="container">
-            <h2>Welcome to Ujjwal Infratech</h2>
-            <img src="images/Unknown.jpg" height="300px" alt="Home Image">
-            <p><b>Ujjwal Infratech specializes in providing affordable land solutions in Bihar, facilitating dream projects with prime locations at competitive rates.</b> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium culpa aliquid numquam? Ullam, quo illum eos nam perferendis voluptas porro. </p>
+            <h2>About Us</h2>
+            <p>We are a leading Infratech company in Bihar, specializing in land acquisition and sales. Our team of experts ensures that you get the best deals in the market. We provide land at very affordable rates in various locations including Bihar. Our services are tailored to meet the needs of our clients and ensure their satisfaction.</p>
+            <img src="images/about image.jpg" alt="About Us Image">
         </div>
     </section>
 
-    <section id="about" class="about-services-section">
+    <section id="services" class="services-section">
         <div class="container">
-            <div class="about-section">
-                <h2>About Us</h2>
-                <p>Ujjwal Infratech is committed to transforming landscapes by offering premium land at affordable rates in Bihar, ensuring opportunities for growth and development.</p>
+            <h2>Why Maa Vindihyavasini is The Best Choice ?</h2>
+            <div>
+                We at Maa Vindihyavasini (Ayodhya City Bihta, Patna) <br>
+                <table>
+                    <tr> * don't deviate from what promised</tr> <br>
+                    <tr> * don't deviate from your concern if any.</tr> <br>
+                    <tr> * don't derail from chosen path.</tr> <br>
+                    <tr> * don't deny your legitimate demand.</tr> <br>
+                    <tr> * trust in us, we live up to what we promise.</tr> <br>
+                </table>
             </div>
-            <div class="services-section" id="services">
-                <h2>Our Services</h2>
-                <p>We provide land at very affordable rates in Bihar, enabling individuals and businesses to invest in promising opportunities. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, mollitia.</p>
-            </div>
+            <img src="images/indoor.jpg" width="40%" alt="Services Image">
+            <img src="images/indoor2.jpg" width="40%" alt="Services Image">
         </div>
     </section>
 
@@ -51,35 +62,66 @@
             <h2>Current Projects</h2>
             <div class="project-row">
                 <div class="project">
-                    <img src="images/Unknown-2.jpg" alt="Project 1">
-                    <h3>Bihta, Patna</h3>
-                    <p>Description of the project in Bihta, Patna.</p>
+                    <img src="images/plot.jpg" alt="Project 1 Image">
+                    <h3>Project in Bihta, Patna</h3>
+                    <p>Our Bihta project offers prime land at competitive prices, ideal for residential and commercial purposes.</p>
                 </div>
                 <div class="project">
-                    <img src="images/Unknown-3.jpg" alt="Project 2">
-                    <h3>Delhi</h3>
-                    <p>Description of the project in Delhi.</p>
+                    <img src="images/plot 2.jpg" alt="Project 2 Image">
+                    <h3>Project in Bihta, Patna</h3>
+                    <p>Located in the heart of Patna, this project provides excellent investment opportunities with high growth potential.</p>
                 </div>
                 <div class="project">
-                    <img src="images/Unknown-4.jpg" alt="Project 3">
-                    <h3>Bihta, Patna</h3>
-                    <p>Description of another project in Bihta, Patna.</p>
+                    <img src="images/plot 3.jpg" alt="Project 3 Image">
+                    <h3>Project in Bihta, Patna</h3>
+                    <p>Our Bihta project offers premium plots in a prime location, perfect for building your dream home or commercial space.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer>
+    <section id="how-it-works" class="info-section">
         <div class="container">
-            <div class="contact-section" id="contact">
-                <div class="contact-info">
-                    <h2>Contact Us</h2>
-                    <p>Email: info@ujjwalinfratech.com</p>
-                    <p>Phone: +1234567890</p>
-                </div>
-                <div class="contact-image">
-                    <img src="images/images.png" alt="Contact Image">
-                </div>
+            <h2>How It Works?</h2>
+            <!-- <img src="how-it-works.jpg" alt="How It Works Image"> -->
+            <p>We make the process of buying land simple and straightforward. From initial consultation to final transaction, we guide you every step of the way.</p>
+        </div>
+    </section>
+
+    <section id="evaluate-property" class="info-section">
+        <div class="container">
+            <h2>Evaluate Property</h2>
+            <img src="images/how it works.jpg" alt="Evaluate Property Image">
+            <p>Our experts evaluate each property thoroughly to ensure it meets all legal and quality standards, providing you with peace of mind.</p>
+        </div>
+    </section>
+
+    <section id="meet-our-agent" class="info-section">
+        <div class="container">
+            <h2>Meet Our Agent</h2>
+            <img src="images/meet your agent.jpg" alt="Meet Our Agent Image">
+            <p>Our professional agents are here to assist you in finding the perfect property. They offer personalized service and expert advice.</p>
+        </div>
+    </section>
+
+    <section id="close-the-deal" class="info-section">
+        <div class="container">
+            <h2>Close the Deal</h2>
+            <img src="images/close the deal.jpeg" alt="Close the Deal Image">
+            <p>Once you have chosen your property, we handle all the paperwork and legalities to ensure a smooth and hassle-free transaction.</p>
+        </div>
+    </section>
+
+    <footer>
+        <div id="contact" class="container contact-section">
+            <div class="contact-info">
+                <h2>Contact Us</h2>
+                <p>Email: info.maavindhyavasinidevelopers@gmail.com</p>
+                <p>Phone: +91 9229882974, +91 7782845074</p>
+                <p>Address: Khagaul lakh, patna, 801105</p>
+            </div>
+            <div class="contact-image">
+                <img src="images/original logo.png" width="200px" alt="Contact Image">
             </div>
         </div>
     </footer>
