--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="home" class="home-section">
         <h2 style="color:chocolate" >Welcome to <dir style="color: crimson;">MAA VINDHYAVASINI DEVELOPERS</dir> </h2>
-        <p style="color: black;"> MAA VINDHYAVASINI DEVELOPERS is dedicated to providing premium land and property solutions at affordable prices. Our mission is to help you find your dream property effortlessly.</p>
+        <p style="color: black;"> MAA ujjwal DEVELOPERS is dedicated to providing premium land and property solutions at affordable prices. Our mission is to help you find your dream property effortlessly.</p>
         <img src="images/front image.jpg" width="50%" alt="Home Image">
         <p style="color: black;">MAA VINDHYAVASINI is an extremely customere oriented real estate company that encompasses passionate and perfect delivery to inject a sense of satisfaction to its customere who are associated with it.</p>
     </section>
