--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAA VINDHYAVASINI DEVELOPERS</title>
+    <title>UJJUENGINEER DEVELOPERS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,10 +25,10 @@
     </header>
 
     <section id="home" class="home-section">
-        <h2 style="color:chocolate" >Welcome to <dir style="color: crimson;">MAA VINDHYAVASINI DEVELOPERS</dir> </h2>
-        <p style="color: black;"> MAA ujjwal DEVELOPERS is dedicated to providing premium land and property solutions at affordable prices. Our mission is to help you find your dream property effortlessly.</p>
+        <h2 style="color:chocolate" >Welcome to <dir style="color: crimson;">UJJUENGINEER DEVELOPERS</dir> </h2>
+        <p style="color: black;"> UJJUENGINEER DEVELOPERS is dedicated to providing premium land and property solutions at affordable prices. Our mission is to help you find your dream property effortlessly.</p>
         <img src="images/front image.jpg" width="50%" alt="Home Image">
-        <p style="color: black;">MAA VINDHYAVASINI is an extremely customere oriented real estate company that encompasses passionate and perfect delivery to inject a sense of satisfaction to its customere who are associated with it.</p>
+        <p style="color: black;">UJJUENGINEER is an extremely customere oriented real estate company that encompasses passionate and perfect delivery to inject a sense of satisfaction to its customere who are associated with it.</p>
     </section>
 
     <section id="about" class="about-section">
@@ -41,9 +41,9 @@
 
     <section id="services" class="services-section">
         <div class="container">
-            <h2>Why Maa Vindihyavasini is The Best Choice ?</h2>
+            <h2>Why UJJUENGINEER is The Best Choice ?</h2>
             <div>
-                We at Maa Vindihyavasini (Ayodhya City Bihta, Patna) <br>
+                We at UJJUENGINEER (Ayodhya City Bihta, Patna) <br>
                 <table>
                     <tr> * don't deviate from what promised</tr> <br>
                     <tr> * don't deviate from your concern if any.</tr> <br>
