--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
                 <div class="project">
                     <a href=""><img src="images/book-images.jpg" alt="Project 1 Image"></a>
                     <a href=""><h3>Books and notes pdf</h3></a>
-                    <p>click above to get the premium pdf and notes of subject's Hod.</p>
+                    <p>*under development<br>click above to get the premium pdf and notes of subject's Hod.</p>
                 </div>
                 <div class="project">
-                    <a href=""><img src="images/time-table.jpg" alt="Project 2 Image"></a>
-                    <a href=""><h3>Time table and syllabus</h3></a>
+                    <a href="https://ujjuengineer.github.io/IT-TimeTable/"><img src="images/time-table.jpg" alt="Project 2 Image"></a>
+                    <a href="https://ujjuengineer.github.io/IT-TimeTable/"><h3>Time table and syllabus</h3></a>
                     <p></p>
                 </div>
                 <div class="project">
-                    <a href=""><img src="images/events.jpg" alt="Project 3 Image"></a>
+                    <a target="_blank" href=""><img src="images/events.jpg" alt="Project 3 Image"></a>
                     <a href=""><h3>Important Event Updates</h3></a>
-                    <p>Click above to get the updates of recent events and clubs activities. </p>
+                    <p>*under development <br> Click above to get the updates of recent events and clubs activities. </p>
                 </div>
             </div>
         </div>
