--- a/index.html
+++ b/index.html
@@ -126,24 +126,24 @@
                 <p>Address: Khagaul lakh, patna, 801105</p> -->
                 <table>
                     <tr>
-                        <td rowspan="">Developer : </td>
-                        <td>  Ujjwal Kumar-IT-1st yr.</td>
+                        <td style="color: black;">Developer </td>
+                        <td>  Ujjwal Kumar</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td><a href="https://www.linkedin.com/in/ujjuengineer?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
                     </tr>
                     <tr>
-                        <td>Team Mem </td>
-                        <td> : Anurag Mishra-IT-1st yr.</td>
+                        <td style="color: black;">Team Mem </td>
+                        <td>Anurag Mishra</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td><a href="https://www.linkedin.com/in/anurag-mishra-256101318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
                     </tr>
                     <tr>
-                        <td>Manager </td>
-                        <td> : Siddhi Mishra-ECE-1st yr.</td>
+                        <td style="color: black;">Manager </td>
+                        <td> Siddhi Mishra</td>
                     </tr>
                     <tr>
                         <td></td>
