--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div class="project-row">
                 <div class="project">
                     <a href=""><img src="images/book-images.jpg" alt="Project 1 Image"></a>
-                    <a href=""><h3>Books and notes pdf</h3></a>
-                    <p>*under development<br>click above to get the premium pdf and notes of subject's Hod.</p>
+                    <a href="https://mmmut-page.github.io/books-and-notes/"><h3>Books and notes pdf</h3></a>
+                    <!-- <p>click above to get the premium pdf and notes of subject's Hod.</p> -->
                 </div>
                 <div class="project">
                     <a href="https://ujjuengineer.github.io/IT-TimeTable/"><img src="images/time-table.jpg" alt="Project 2 Image"></a>
