--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2>E-Academics</h2>
             <div class="project-row">
                 <div class="project">
-                    <a href=""><img src="images/book-images.jpg" alt="Project 1 Image"></a>
+                    <a href="https://mmmut-page.github.io/books-and-notes/"><img src="images/book-images.jpg" alt="Project 1 Image"></a>
                     <a href="https://mmmut-page.github.io/books-and-notes/"><h3>Books and notes pdf</h3></a>
                     <!-- <p>click above to get the premium pdf and notes of subject's Hod.</p> -->
                 </div>
@@ -131,7 +131,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href="https://www.linkedin.com/in/ujjuengineer?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
+                        <td><a target="_blank" href="https://www.linkedin.com/in/ujjuengineer?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
                     </tr>
                     <tr>
                         <td style="color: black;">Team Mem </td>
@@ -139,7 +139,15 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href="https://www.linkedin.com/in/anurag-mishra-256101318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
+                        <td><a target="_blank" href="https://www.linkedin.com/in/anurag-mishra-256101318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Ganesh Pathak</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><a target="_blank" href="https://www.linkedin.com/in/ganesh-pathak-43065a286?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">: LINKEDIN</a></td>
                     </tr>
                     <tr>
                         <td style="color: black;">Manager </td>
@@ -147,7 +155,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href="https://www.linkedin.com/in/siddhi-mishra-06761a20b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
+                        <td><a target="_blank" href="https://www.linkedin.com/in/siddhi-mishra-06761a20b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
                     </tr>
                 </table>
             </div>
