--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     <p></p>
                 </div>
                 <div class="project">
-                    <a target="_blank" href=""><img src="images/events.jpg" alt="Project 3 Image"></a>
-                    <a href=""><h3>Important Event Updates</h3></a>
-                    <p>*under development <br> Click above to get the updates of recent events and clubs activities. </p>
+                    <a target="_blank" href="https://mmmut-page.github.io/notification-page/"><img src="images/events.jpg" alt="Project 3 Image"></a>
+                    <a href="https://mmmut-page.github.io/notification-page/"><h3>Important Event Updates</h3></a>
+                    
                 </div>
             </div>
         </div>
