removed BKL.html

--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
                     </tr>
                     <tr>
                         <td style="color: black;">Team Mem </td>
-                        <td>Anurag Mishra</td>
+                        <td>Ganesh Pathak</td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a target="_blank" href="https://www.linkedin.com/in/anurag-mishra-256101318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
+                        <td><a target="_blank" href="https://www.linkedin.com/in/ganesh-pathak-43065a286?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">: LINKEDIN</a></td>
                     </tr>
                     <tr>
                         <td></td>
