updated footer section

--- a/index.html
+++ b/index.html
@@ -162,14 +162,18 @@
                 <p>Address: Khagaul lakh, patna, 801105</p> -->
                 <table>
                     <tr>
-                        <td style="color: black;">Developer </td>
-                        <td>  Ujjwal Kumar</td>
+                        <td style="color: black;">Developer : </td>
+                        <td>&nbsp;Ujjwal Kumar</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td><a target="_blank" href="https://www.linkedin.com/in/ujjuengineer?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
                     </tr>
                     <tr>
+                        <td></td>
+                        <td><a target="_blank" href="https://www.instagram.com/ujjwal.sharma3861/"> : INSTA</a></td>
+                    </tr>
+                    <!-- <tr>
                         <td style="color: black;">Team Mem </td>
                         <td>Ganesh Pathak</td>
                     </tr>
@@ -192,7 +196,7 @@
                     <tr>
                         <td></td>
                         <td><a target="_blank" href="https://www.linkedin.com/in/siddhi-mishra-06761a20b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> : LINKEDIN</a></td>
-                    </tr>
+                    </tr> -->
                 </table>
             </div>
             <!-- <div class="contact-image">
