--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
 
 
-    <section id="home" class="home-section" style="background-image: url(https://static.videezy.com/system/resources/previews/000/043/469/original/01__2824_29.mp4);">
+    <section id="home" class="home-section" style="background-image: url(images/backGround.mp4);">
         <h2 style="color:rgb(210, 105, 30); background-color: rgb(0, 0, 0); " >Welcome to <dir style="color: rgb(220, 20, 60);">MMMUT gorakhpur, First Year Lounge</dir> </h2>
         
         <p class="zoom-paragraph" style="color: wheat; background-color: rgba(0, 0, 0, 0.524); border-radius: 7px;" > 
