--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </script>
 
 </head>
-<body>
+<body >
     <!-- Main header with an image -->
     <!-- <div class="header"></div> -->
 
@@ -75,7 +75,7 @@
     
 
 
-    <section id="home" class="home-section" style="background-image: url(images/backgroundImage.jpg);">
+    <section id="home" class="home-section" >
         
         <h2 class="wave-text">Welcome to MMMUT gkp, First Year Lounge</h2>
 
@@ -146,10 +146,10 @@
             <div style="display: flex; justify-content: center;">
                  <br>
                  <table class="table" style="text-align: left;"> 
-                    <tr><td ><a style="color: antiquewhite;" target="_blank" href="https://www.instagram.com/first_year_lounge_mmmut?igsh=MXhub2NpczYxcm80dA==">> Follow First Year Lounge</a></td></tr>
+                    <!-- <tr><td ><a style="color: antiquewhite;" target="_blank" href="https://www.instagram.com/first_year_lounge_mmmut?igsh=MXhub2NpczYxcm80dA==">> Follow First Year Lounge</a></td></tr> -->
                     <tr><td><a style="color: antiquewhite;" target="_blank" href="http://www.mmmut.ac.in/">> MMMUT OFFICIAL WEBSITE</a></td></tr>
                     <tr><td><a style="color: antiquewhite;" target="_blank" href="https://mmmut.admissions.nic.in">> MMMUT ADMISSION PORTAL</a></td></tr>
-                    <tr><td><a style="color: antiquewhite;" target="_blank" href="https://ngl.link/first_year_lounge_mmmut">> NGL</a></td></tr>
+                    <!-- <tr><td><a style="color: antiquewhite;" target="_blank" href="https://ngl.link/first_year_lounge_mmmut">> NGL</a></td></tr> -->
                     <tr><td><a style="color: antiquewhite;" target="_blank" href="https://www.instagram.com/cdc.mmmut?igsh=MTJmcGhybXhqbG9pbg==">> Coders dev club</a></td></tr>
                     <tr><td><a style="color: antiquewhite;" target="_blank" href="https://www.instagram.com/robotics_club_mmmut?igsh=MTdlOXltd3E0dmM4cQ==">> Robotics Club</a></td></tr>
                     <tr><td><a style="color: antiquewhite;" target="_blank" href="https://www.instagram.com/drone_iot_club.mmmut?igsh=YjZ6ZWM5N201bzd0">> Drone & IOT Club</a></td></tr>
@@ -167,7 +167,7 @@
 
     <!-- Contact Section -->
     <section id="contact-section">
-        <h2>Contact Me</h2>
+        <h2 style="color: white;">Contact Me</h2>
         <form id="contact-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required><br>
