updated the css file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             Starting college is an exciting yet challenging phase, and this platform is here to make your transition to MMMUT Gorakhpur as smooth as possible. Designed specifically for first-year students, this website is a one-stop solution to help you navigate your new journey in college. Here, you’ll find a wide range of essential resources that are crucial for your academic and personal growth. Access important class notes, recommended books, and an up-to-date class timetable to stay organized and on top of your studies. Stay informed about key events and updates happening across the campus, ensuring you never miss out on any opportunities to learn, connect, and grow.
         </p>
         
-        <img src="https://lh5.googleusercontent.com/proxy/jdEzqZi94w-Vz8F5-rZchDvxLKZRywVzxIryI2wSrKmCqVvN_LMnKaTbBfG_UURTf2LsCvMwmg1KsYPIqiyk027FlKK7qg" width="80%" alt="Home Image">
+        <img src="https://images.shiksha.com/mediadata/images/1533712673phpx3niJ2.jpeg" width="80%" alt="Home Image">
         
         <p class="zoom-paragraph" style="color: wheat; background-color: rgba(0, 0, 0, 0.524); border-radius: 7px;">
             This platform also serves as a guide to familiarize you with the college, its culture, and everything you need to know to settle in quickly. Whether it’s preparing for classes, exploring extracurricular activities, or understanding the college's functioning, this website is designed to empower you with the tools and information you need to succeed.
